# climate_down

./: .gitignore  README.md  pyproject.toml
config/: s2s_catalogue.yaml
config/jobs/: aifs_renewables.yaml  aifs_renewables_ser.yaml  aifs_wind_pv.yaml  dwd-icon_renewables.yaml  dwd-icon_renewables_ser.yaml  dwd_icon_operation_renewables.yaml  dwd_icon_operation_renewables_ser.yaml  dwd_icon_renewables.yaml  dwd_icon_renewables_ser.yaml  gfs_renewables.yaml  gfs_renewables_ser.yaml  gfs_wind_pv.yaml  graphcast_2025_aigfs.yaml  graphcast_2025_history.yaml  graphcast_history_renewables.yaml  graphcast_pres_renewables.yaml  graphcast_sfc_renewables.yaml  ifs_renewables.yaml  ifs_renewables_ser.yaml  s2s_renewables_cma.yaml  s2s_renewables_ecmwf.yaml  s2s_renewables_iap_cas.yaml  s2s_renewables_ncep.yaml  s2s_renewables_ukmo.yaml
config/s2s/: _capabilities.json
config/sources/: aifs.yaml  dwd-icon.yaml  dwd_icon.yaml  dwd_icon_operation.yaml  gfs.yaml  graphcast_history.yaml  graphcast_merged.yaml  graphcast_pres.yaml  graphcast_sfc.yaml  hrrr.yaml  ifs.yaml  s2s_cma.yaml  s2s_ecmwf.yaml  s2s_iap_cas.yaml  s2s_ncep.yaml  s2s_ukmo.yaml
deploy/: README.md  download_run.sh
examples/: aifs_partial_download.py  plot_pv_radiation.py  plot_wind_all_sources.py  plot_wind_speed.py
scripts/: build_s2s_catalogue.py
src/climate_download/: __init__.py  cli.py  config.py  jobs.py  logging_setup.py  manifest.py
tests/: conftest.py  test_icon.py  test_index.py  test_jobs.py  test_partial.py  test_s2s.py  test_s2s_catalogue.py  test_sources.py
(+19 files in other folders)
