[project]
name = "climate-download"
version = "0.1.0"
description = "climate_pipeline download sub-project: scheduled and historical NWP downloads with GRIB region/variable subsetting"
authors = [
    { name = "zomosky", email = "2646097103@qq.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
]

[project.scripts]
climate_download = "climate_download.cli:main"

[project.optional-dependencies]
viz = [
    "cfgrib>=0.9.15.1",
    "eccodeslib>=2.46.2.19",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "xarray>=2026.4.0",
]
s2s = [
    "cdsapi>=0.7.5",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
